--- a/WebApp/appsettings.Development.json
+++ b/WebApp/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=FOZLE-RABBI\\SQLEXPRESS;Database=AppUsers; Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=DESKTOP-A87MT3L\\SQLEXPRESS;Database=AppUsers; Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   }
 }
