Email configure complete

--- a/WebApp/appsettings.Development.json
+++ b/WebApp/appsettings.Development.json
@@ -8,5 +8,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-A87MT3L\\SQLEXPRESS;Database=AppUsers; Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+  },
+  "SMTP": {
+    "Host": "",
+    "Port": 587,
+
   }
 }
