Email Services Working properly

--- a/WebApp/appsettings.Development.json
+++ b/WebApp/appsettings.Development.json
@@ -10,8 +10,9 @@
     "DefaultConnection": "Server=DESKTOP-A87MT3L\\SQLEXPRESS;Database=AppUsers; Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   },
   "SMTP": {
-    "Host": "",
-    "Port": 587,
-
+    "Host": "smtp-relay.brevo.com",
+    "Port": 2525,
+    "User": "901cab002@smtp-brevo.com",
+    "Password": "fORJUMmw9NYE1IBZ"
   }
 }
